merged r5142:5566 from 0.8 branch to trunk
git-svn-id: svn+ssh://svn.osafoundation.org/svn/server/cosmo/trunk@5567 5fd0b11a-f2f7-0310-948e-c8f80ebed640